Prevent outlines from overlapping items above and below

--- a/fb.katex.css
+++ b/fb.katex.css
@@ -49,7 +49,16 @@ div.html-div.xdj266r.x11i5rnm.xat24cr.x1mh8g0r.xexx8yu.x4uap5.x18d9i69.xkhd6sd.x
   padding-bottom: 13px;
 }
 
-span.html-span.xdj266r.x11i5rnm.xat24cr.x1mh8g0r.xexx8yu.x4uap5.x18d9i69.xkhd6sd.x1hl2dhg.x16tdsg8.x1vvkbs.x1xf6ywa {
+/* Prevent your last chat bubble's outline from overlapping 'Sent Xm ago' below it */
+span[dir='auto']
+  > span.html-span.xdj266r.x11i5rnm.xat24cr.x1mh8g0r.xexx8yu.x4uap5.x18d9i69.xkhd6sd.x1hl2dhg.x16tdsg8.x1vvkbs.x1xf6ywa {
   display: block;
   padding-top: 10px;
+}
+
+/* Prevent edited chat bubble outline from overlapping 'Edited' above it */
+div[aria-label='Edited']
+  > span.html-span.xdj266r.x11i5rnm.xat24cr.x1mh8g0r.xexx8yu.x4uap5.x18d9i69.xkhd6sd.x1hl2dhg.x16tdsg8.x1vvkbs {
+  display: block;
+  padding-bottom: 7px;
 }
